<resources>
    <string name="app_name">BetterFencer</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="sets">Sets:</string>
    <string name="reps">Reps:</string>
    <string name="lat_set">lat_set</string>
    <string name="lat_rep">lat_rep</string>
    <string name="lateral_broad_jump_title">Lateral Broad Jump</string>
    <string name="lateral_broad_jump_title_short">Lateral Jump</string>
    <string name="lateral_broad_jump_guid_title">Lateral Broad Jump – Quick Guide:</string>
    <string name="lateral_broad_jump_guid_text">1. into an en garde position \n 2. Lift your front foot off the ground and hold \n 3. Using your arms to help propel you, jump as far as you can \n 4. Focus on “sticking” the landing with the back foot landing facing the same direction as when you jumped \n 5. Once you complete the full set, repeat on the opposite side</string>
    <string name="lateral_broad_jump_reps_title">Lateral Broad Jump – Sets &amp; Reps</string>
    <string name="lateral_broad_jump_reps_text">How many you choose to do in a session depends on your fencing level. If you are a beginner, start with two sets of five repetitions and gradually work your way up. If you are more advanced, you can work up to three sets of 12–15 repetitions, or more if that is not challenging enough.</string>
    <string name="lateral_broad_jump_explanation_title">Lateral Broad Jump – Full Explanation</string>
    <string name="lateral_broad_jump_explanation_text">Get into an en garde position as you normally would, then lift your front foot off the ground and hold it in the air. By simply hovering the front foot off the ground, you force your back leg to take on additional load while it performs the exercise. Using your arms to help propel you, begin your jump with the objective being to jump as far forward as you can. Your front foot should remain in the air as you land on the same back foot that you jumped off of. The back foot should land facing the same direction as you jumped (and in your en garde position). As you land, focus on “sticking” the landing and regaining your balance before completing the next rep. It can be helpful to start on a baseline and use a cone or chalk line to measure how far you go with each jump. Once you complete the full set, repeat on the opposite side to make sure you are creating balanced strength in both legs.</string>
    <string name="lateral_broad_jump_progression_title">Lateral Broad Jump – Progression</string>
    <string name="lateral_broad_jump_progression_text">There are two ways to make this exercise more challenging. The first is carry more weight while you are performing the lunge movement. For example, you can hold light dumbbells (2–5 pounds) in your hands or, as Scott prefers, wear a weighted vest. Another method is placing a source of resistance behind you, attached to your waist. This can be done with a large resistance band or bungee cord looped around your waist and then attached to a stable wall or door. Of course this can also be accomplished with a trusty friend or partner willing to hold the resistance band for you. The strength of the band and how far away you stand from it determines how challenging the exercise will be.</string>
    <string name="stan_set">stan_set</string>
    <string name="stan_rep">stan_rep</string>
    <string name="the_standing_long_jump_title">The Standing Long Jump</string>
    <string name="the_standing_long_jump_title_short">Standing Jump</string>
    <string name="the_standing_long_jump_guid_title">Standing Long Jump – Quick Guide:</string>
    <string name="the_standing_long_jump_guid_text">1. Stand with feet hip distance apart \n 2. Bend your knees and swing arms backwards \n 3. Swing arms forward and jump and land with both feet at the same time \n 4.Maintain balance and try to stick the landing </string>
    <string name="the_standing_long_jump_reps_title">Standing Long Jump – Sets &amp; Reps</string>
    <string name="the_standing_long_jump_reps_text">As with the previous exercise, if you are a beginner, you should start with only a few jumps, working your way up to the number of repetitions and sets that are challenging for you. If you are advanced, work up to at least three sets of 12–15 repetitions before you move to any progressions on the exercise.</string>
    <string name="the_standing_long_jump_explanation_title">Standing Long Jump – Full Explanation</string>
    <string name="the_standing_long_jump_explanation_text">Stand with both feet about hip distance apart. Bend your knees as you gently swing your hands backwards. Then, as you bring your hands forward again, jump forward with both feet at the same time. Your goal here is distance, and you want to get your feet out in front of you to cover as much ground as possible. Be careful not overextend to the point that you cannot maintain your balance when you land. Try to “stick” the landing and then completely reset your starting position before you proceed to the next jump.</string>
    <string name="the_standing_long_jump_progression_title">Standing Long Jump – Progression</string>
    <string name="the_standing_long_jump_progression_text">One way to make this exercise more challenging is to begin each jump with a plyometric start. Find a low, stable box or bench which allows you to stand safely above ground level (approximately 12–20 inches). Begin with your feet close to the edge, feet about hip distance apart. With a small jump, drop off the box, landing on both feet (same distance apart). Then immediately launch into your long jump. You will have to work out the proper coordination for this so that you can still use your swinging arms to propel you forward but also not resting too long before launching into the jump. You want to imagine that your legs are like a rubber band; when you first land, your muscles stretch out, and when they snap back into place, that is your long jump. If you wait too long, the plyometric effect is lost.</string>
    <string name="speed_set">speed_set</string>
    <string name="speed_rep">speed_rep</string>
    <string name="speed_skaters_title">Speed Skaters</string>
    <string name="speed_skaters_title_short">Speed Skaters</string>
    <string name="speed_skaters_guid_title">Speed Skaters – Quick Guide</string>
    <string name="speed_skaters_guid_text">1. Stand with feet hip distance apart \n 2. Lift one leg and leap in that direction \n 3. Land only on the foot that started off the ground \n 4. Alternate back and forth, ensuring that only one foot is on the ground at a time \n 5. Ensure you are moderately balanced before moving onto the next jump</string>
    <string name="speed_skaters_reps_title">Speed Skaters – Sets &amp; Reps</string>
    <string name="speed_skaters_reps_text">Beginners should start with 1–2 sets of 3–5 repetitions and focus completely on performing the elements correctly. More advanced can work up to three sets of 12–15 repetitions before adding the progressions below.</string>
    <string name="speed_skaters_explanation_title">Speed Skaters – Full Explanation</string>
    <string name="speed_skaters_explanation_text">Standing with your feet approximately hip distance apart, lift one foot so that you are standing on one leg. Using your arms to help you balance, leap in the direction of the foot that is off the ground, while continuing to face forward. You have two objectives: the first is to gain as much distance as you can. The second and more important goal is to land on the other foot (the one that started off the ground) and “stick” the landing. The exercise benefits you not only by challenging the jumping leg to propel your body through the air, but also by demanding that your other leg absorb the impact of the jump and stabilize your landing. To continue, make sure you completely regain your balance and then launch back in the direction you came from and onto the foot that you started on in the first jump. For the duration of the exercise you will leap from side to side. Each time you land, it can be helpful to let the leg that remains in the air slide out behind the standing leg (for example, the way a bowler lets his inside leg slide behind the balancing leg, only keep it in the air). Your arms play a critical role in helping you balance, and many find it helpful to allow the arm which is opposite from the landing leg, to cross in front of the body as it rotates to help absorb the lateral momentum of the jump.</string>
    <string name="speed_skaters_progression_title">Speed Skaters – Progression</string>
    <string name="speed_skaters_progression_text">This is quite a technical exercise so being able to complete a balanced landing is essential before proceeding. Once you are confident that you can, the way to progress this exercise is to make the landing a little more challenging. You can do this in several ways. The first is to complete the exercise without shoes on a forgiving surface like grass. This forces you to work a little harder to hold your balance as you land. The second way is to do the exercise on a surface that absorbs some of the impact of your landing such as a gymnastics fitness mat that is used for tumbling (because the mat compresses as you land, your muscles will have to work harder to control the weight of your body). Yet another way the exercise can be enhanced is to do it barefoot on a less stable surface, like sand. In this case, when you land, the surface actually moves slightly under your foot which means you have to really challenge yourself to stay upright (this will also build ankle strength). The good news is that if you fall, you’ve got a softer surface below you to cushion the impact. You can also try the exercise with light dumbbells in each hand, but leaping with your own body weight is preferred so you don’t compromise your technique. This is one of the exercises that shouldn’t be done in timed intervals (for Power) because doing so could compromise your ability to land the leap properly before beginning the next jump.</string>
    <string name="rev_set">rev_set</string>
    <string name="rev_rep">rev_rep</string>
    <string name="the_reverse_long_jump_title">The Reverse Long Jump</string>
    <string name="the_reverse_long_jump_title_short">Reverse Jump</string>
    <string name="the_reverse_long_jump_guid_title">Reverse Long Jump – Quick Guide</string>
    <string name="the_reverse_long_jump_guid_text">1. Start in en garde position \n 2. Raise back foot a few inches off the ground \n 3. Use your front leg to leap backwards \n 4. Land on both feet at the same time \n 5.Maintain balance and technique \n 6. Complete set and repeat on other side</string>
    <string name="the_reverse_long_reps_title">Reverse Long Jump - Sets &amp; Reps</string>
    <string name="the_reverse_long_reps_text">Beginners should start with one to two sets of 3–5 repetitions and focus on performing the elements correctly. More advanced fencers can work up to three sets of 12–15 repetitions.</string>
    <string name="the_reverse_long_jump_explanation_title">Reverse Long Jump – Full Explanation</string>
    <string name="the_reverse_long_jump_explanation_text">Think of this exercise as almost the opposite of the lateral broad jump, as outlined above. Get into the en garde position, and instead of lifting the front leg, hover the back leg a few inches above the ground. The toes of that front leg should be facing forward, not out to the side. Then, with as much power as you can, thrust off the front leg, launching yourself backwards as you would in a real bouting scenario. After pushing off, both feet should be in the air before landing solidly on both feet. Your goal here is distance and, like with other exercises, you want to make sure that you don’t compromise your technique. Always be sure to regain stability before beginning the next repetition.</string>
</resources>